2019-01-14 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-6.
	* Fix to fMoments class which had the wrong slot (scenario instead of moments).

2018-08-25 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-5.
	* Clean up of xts plotting which was broken due to xts maintainer
	breaking backward compatibility. Switched to zoo.
	* Added extra option in rcov and rcor ('output') to enable either an array (default)
	or a wide matrix/xts (when possible) for correlations and covariances. In the case
	of covariances, the diagonal is also returned, whilst for correlation only the lower
	diagonal.
	* Added STRICT_R_HEADERS per Dirk's email (change related to PI only).

2018-02-12 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-4.
	* Cleanup and routine registration
	* Small fix .pca in rmgarch-ica.R file for not dropping dimension
	when n=2 (thanks to Johannes Scheuplein for fix).

2017-06-01 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-3.
	* Added option to use cluster on the window dimension rather than assets
	in dccroll.
	* Numerous minor changes to underlying functionality.

2016-09-20 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-2.
  * gogarchsim now takes either a goGARCHfit or goGARCHfilter object. First argument
  to gogarchsim (fit) replaced by 'object'. This allows better handling of the simulated
  forecast density by first filtering for new data from a filtered object
  and then simulating the n-ahead density.

2016-02-20 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-1.
	* Fix to fscenario function (would not run when using dcc or cgarch).

2015-12-27 Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-0.
	* Fix to dccsim when using startMethod sample. The
	wrong standardized residuals were being passed