@@ -1,8 +1,8 @@
 Package: rmgarch
 Type: Package
 Title: Multivariate GARCH Models
-Version: 1.3-6
-Date: 2019-01-14
+Version: 1.3-7
+Date: 2021-04-30
 Author: Alexios Ghalanos <alexios@4dscape.com>
 Maintainer: Alexios Ghalanos <alexios@4dscape.com>
 Depends: R (>= 3.0.2), methods, rugarch, parallel
