@@ -3,7 +3,7 @@ COPYRIGHT STATUS
 
 This code is
 
-  Copyright (C) 2008-2014 by Alexios Ghalanos.
+  Copyright (C) 2008-2021 by Alexios Ghalanos.
 
 All code is subject to the GNU General Public License, Version 3. See
 the file COPYING for the exact conditions under which you may
