@@ -1,3 +1,9 @@
+2021-03-30 Alexios Galanos <alexios@4dscape.com>
+	* DESCRIPTION (Version): New version is 1.3-7.
+	* Fixes to armadillo code as there have been some changes 
+	since the package was last updated.
+	* Check that the package builds with new Matrix package.
+	
 2019-01-14 Alexios Ghalanos <alexios@4dscape.com>
 	* DESCRIPTION (Version): New version is 1.3-6.
 	* Fix to fMoments class which had the wrong slot (scenario instead of moments).
